# tankoh2

./: .gitignore  LICENSE.md  Makefile  README.md  changelog.md  pyproject.toml  requirements.txt  setup.py
LICENSES/: MIT.txt  SCIPY_LICENSE.txt  USED_SOFTWARE.txt
data/: CFRP_HyMod.json  CFRP_T1000G_LY556.json  CFRP_T700SC_LY556.json  Dome2_contour_NGT-BIT-2020-09-16_48mm.txt  Dome_contour_Kautext.txt  Dome_contour_NGT-BIT-2020-09-16_48mm.txt  Dome_contour_NGT-BIT-2022-03-04.txt  Dome_contour_NGT-BIT-measured.txt  Dome_contour_NGT-BIT-measured_modPO.txt  Dome_contour_NGT-BIT-shrinkage.txt  Dome_contour_NGT-BIT-small.txt  Liner-2022-03-04.liner  NGT-BIT-2020-09-16.design  NGT_BIT_dome.dome  NGT_BIT_dome_2022-03-04.dome  Winding_NGT-BIT-2020-09-16.txt  Winding_NGT-BIT-2021-03-04.txt  ist_soll.xlsx
doc/: bending.rst  conf.py  index.rst  library.bib  metal.rst  optimization.md  optimization.rst  winding.rst
src/tankoh2/: __about__.py  __init__.py  __main__.py  check_err.py  continueVesselCAE.py  contour.py  contourcreator.py  control.py  control_cl.py  control_continueVesselCAE.py  control_doe.py  control_sf.py  existingdesigns.py  logger.py  material.py  optimize.py  service.py  settings.py  solver.py  utilities.py  vessel_cl.py  winding.py
test/: test_utilities.py
test/test_control/: test_genericcontrol.py
test/test_design/: test_designuitls.py  test_existingdesigns.py
test/test_geometry/: test_contour.py  test_dome.py  test_geoutils.py  test_liner.py
test/test_mechanics/: test_fatigue.py
test/test_service/: test_pysicalprops.py
(+60 files in other folders)
