# SPDX-FileCopyrightText: 2022 German Aerospace Center (DLR)
#
# SPDX-License-Identifier: MIT

[tool.poetry]
name = "tankoh2"
version = "2.3.0"
description = "Utilities for software builds, documentation, cluster interaction, calling fem tools, logging, exceptions and simple geometric and mechanical operations."
license = "MIT"
authors = ["Sebastian Freund <sebastian.freund@dlr.de>", "Andreas Schuster <andreas.schuster@dlr.de>"]
readme = "README.md"
packages = [
    {include = "tankoh2", from = "src"},
]
include = ["changelog.md", "LICENSES/MIT.txt"]
repository = "https://github.com/sfreund-DLR/tankoh2"
keywords = ["lh2 tank", "winding"]

[tool.poetry.scripts]
#sample-calculator = "sample_calculator.main:cmd_main"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.20.0"
matplotlib = "*"
scipy = "*"
pandas = "*"
CoolProp = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
flake8 = "*"
black = "*"
isort = "*"
reuse = "*"
bandit = "*"
Sphinx = "*"
sphinx_rtd_theme = "*"
sphinxcontrib-bibtex = "*"

[tool.coverage.run]
branch = true

[tool.coverage.html]
directory = "build/htmlcov"

[tool.black]
line-length = 120
exclude = "docs"

[tool.isort]
line_length = 120
skip = "docs"
profile = "black"
